Footer and Header have been implemented

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,1 +1,23 @@
-@import './libs/bootstrap-reboot.min';
+@import './libs/bootstrap';
+@import './variables';
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
+  color: var(--text);
+}
+
+a {
+  text-decoration: none !important;
+}
+
+.divider {
+  height: 0.3px;
+  width: 100%;
+  background-color: gray;
+  opacity: .2;
+}
