--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -9,6 +9,13 @@
 
 body {
   color: var(--text);
+  font-size: 14px;
+  line-height: 19px;
+  letter-spacing: -.0015em;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: var(--background);
 }
 
 a {
