--- a/src/components/appFooter/appFooter.scss
+++ b/src/components/appFooter/appFooter.scss
@@ -12,7 +12,6 @@
     height: 72px;
   }
   &__btn {
-    font-family: sf-medium,sans-serif;
     font-size: 14px;
     line-height: 19px;
     letter-spacing: -.0015em;
@@ -24,6 +23,10 @@
     border-radius: 8px;
     border: none;
     outline: none;
+    transition: all .3s ease-in-out;
+  }
+  &__btn:hover {
+    transform: scale(1.03);
   }
   &__btn-span {
     margin-right: 10px;
@@ -86,6 +89,9 @@
     color: #faaf3f;
     font-weight: 500;
   }
+  &__phone:hover {
+    color: #faaf3f;
+  }
   &__payments {
     margin-top: 40px;
   }
@@ -110,6 +116,7 @@
     height: 40px;
     background-color: var(--inputBackground);
     border-radius: 8px;
+    cursor: pointer;
   }
   &__link:not(:last-child) {
     margin-right: 10px;
