--- a/src/components/mainSlider/mainSlider.scss
+++ b/src/components/mainSlider/mainSlider.scss
@@ -20,6 +20,7 @@
     height: 215px;
     margin-right: 16px;
     cursor: pointer;
+    transition: all .3s ease-in-out;
     &-img {
       width: 100%;
       height: 100%;
@@ -27,6 +28,9 @@
       border: 1px solid var(--input);
       object-fit: cover;
     }
+  }
+  &__slide:hover {
+    transform: scale(1.03);
   }
   &__counter {
     display: flex;
