--- a/src/components/orderCart/orderCart.scss
+++ b/src/components/orderCart/orderCart.scss
@@ -1,3 +1,12 @@
+.cart__wrapper {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  z-index: 9;
+  left: 0;
+  top: 0;
+  background-color: rgba(0,0,0,.5);
+}
 .cart {
   position: fixed;
   top: 0;
