Full basic order functionality has been implemented

--- a/src/components/productCard/productCard.scss
+++ b/src/components/productCard/productCard.scss
@@ -252,8 +252,10 @@
     background-color: var(--accent);
     border: none;
     border-radius: 8px;
-    cursor: pointer;
     transition: transform .3s ease-in-out;
+  }
+  &__add-btn:hover {
+    transform: scale(1.05);
   }
   &__text {
     margin-right: 15px;
