Have been implemented: Sign in, Sign up and User Profile functionality

--- a/src/components/appHeader/appHeader.scss
+++ b/src/components/appHeader/appHeader.scss
@@ -9,6 +9,38 @@
     width: 190px;
     height: 72px;
   }
+  &__profile__wrapper {
+    display: flex;
+  }
+  &__profile__loyalty-wrapper {
+    margin-right: 30px;
+    padding-right: 22px;
+    text-align: right;
+    border-right: 1px solid var(--input);
+  }
+  &__profile__loyalty-points {
+    font-size: 16px;
+    line-height: 21px;
+    letter-spacing: -.0031em;
+    color: var(--accent);
+    font-weight: 500;
+  }
+  &__profile__loyalty-text {
+    font-size: 16px;
+    line-height: 21px;
+    letter-spacing: -.0031em;
+    color: var(--disabled);
+    cursor: pointer;
+  }
+  &__profile__icon {
+    cursor: pointer;
+    margin-right: 20px;
+  }
+  &__profile__avatar {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+  }
 }
 .location {
   display: flex;
