--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -62,3 +62,29 @@ ol, ul {
   color: var(--disabled);
   font-weight: 600;
 }
+
+.emptyProfile {
+  background-color: var(--primary);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 885px;
+  height: 430px;
+  &__img {
+    margin-bottom: 24px;
+  }
+  &__title {
+    font-size: 20px;
+    line-height: 1.25;
+    letter-spacing: -.0045em;
+    margin-bottom: 12px;
+    font-weight: 500;
+  }
+  &__text {
+    color: #898989;
+    text-align: center;
+    max-width: 255px;
+  }
+}
