--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -94,3 +94,11 @@ ol, ul {
     max-width: 255px;
   }
 }
+
+.visually-hidden {
+  position: absolute;
+  clip: rect(0 0 0 0);
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+}
