--- a/src/components/userProfile/profile/profile.scss
+++ b/src/components/userProfile/profile/profile.scss
@@ -1,6 +1,7 @@
 .profile {
   background-color: var(--primary);
   border-radius: 4px;
+  width: 885px;
   &__top {
     display: flex;
     justify-content: space-between;
@@ -12,11 +13,40 @@
     align-items: center;
   }
   &__avatar {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+  }
+  &__avatar__wrapper {
+    position: relative;
     width: 91px;
     height: 91px;
-    object-fit: cover;
-    border-radius: 50%;
     margin-right: 32px;
+  }
+  &__avatar__change {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 28px;
+    height: 28px;
+    padding: 0;
+    background-color: var(--background);
+    border-radius: 50%;
+    border: none;
+    outline: none;
+  }
+  &__avatar__change-img-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20px;
+    height: 20px;
+    background-color: var(--accent);
+    border-radius: 50%;
+    transition: transform .3s ease-in-out;
   }
   &__name {
     margin-bottom: 12px;
@@ -60,11 +90,8 @@
     margin: 0 12px 16px;
   }
   &__btn-submit {
-    color: var(--accentContent);
-    background-color: var(--accent);
     border: none;
     border-radius: 8px;
-    cursor: pointer;
     transition: transform .3s ease-in-out;
     padding: 15px 16px;
     width: 240px;
@@ -73,5 +100,11 @@
     letter-spacing: -.0015em;
     margin-left: 44px;
     margin-bottom: 35px;
+  }
+  &__input__error {
+    color: red;
+    position: absolute;
+    font-weight: 400;
+    margin-bottom: 5px;
   }
 }
