--- a/src/components/modals/signUpModal/signUpModal.scss
+++ b/src/components/modals/signUpModal/signUpModal.scss
@@ -1,33 +1,9 @@
-.loginModal__wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  padding: 24px;
-  overflow: hidden;
-  z-index: 10;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-.loginModal {
-  position: relative !important;
-  width: 400px;
-  flex-direction: column;
-  background-color: var(--primary);
-  border-radius: 16px;
-  z-index: 10;
-  overflow: hidden;
-  flex-direction: column;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+.signUpModal {
+  width: 400px !important;
   padding: 30px;
 }
 
-.login {
+.signUp {
   &__title {
     font-size: 24px;
     line-height: 1.25;
@@ -43,8 +19,6 @@
   &__descr {
     margin-bottom: 20px;
   }
-  // &__fields {
-  // }
   &__input {
     font-size: 14px;
     letter-spacing: -.0015em;
