--- a/src/components/modals/reviewModal/reviewModal.scss
+++ b/src/components/modals/reviewModal/reviewModal.scss
@@ -94,3 +94,31 @@
     transform: scale(1.05);
   }
 }
+
+.gratitudeModal {
+  width: 566px !important;
+  padding: 76px 56px 70px;
+  &__close {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    cursor: pointer;
+  }
+  &__status {
+    font-size: 16px;
+    line-height: 21px;
+    letter-spacing: -.0031em;
+    margin-bottom: 16px;
+    color: var(--accent);
+    text-align: center;
+    font-weight: 500;
+  }
+  &__gratitude {
+    font-size: 24px;
+    line-height: 1.25;
+    letter-spacing: .0007em;
+    margin-bottom: 33px;
+    text-align: center;
+    font-weight: 600;
+  }
+}
