--- a/src/components/modals/reviewModal/reviewModal.scss
+++ b/src/components/modals/reviewModal/reviewModal.scss
@@ -70,11 +70,11 @@
   &__checkbox-wrapper {
     display: flex;
     margin-top: 40px;
-    margin-bottom: 15px;
+    margin-bottom: 24px;
     font-size: 12px;
     line-height: 1.33;
   }
-  &__checkbox-wrapper span {
+  &__checkbox-wrapper div {
     margin-left: 10px;
   }
   &__checkbox-wrapper a {
