--- a/src/components/mainSlider/mainSlider.scss
+++ b/src/components/mainSlider/mainSlider.scss
@@ -77,32 +77,8 @@
   margin-top: 4px;
 }
 
-.SliderModal__wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100%;
-  padding: 24px;
-  overflow: hidden;
-  z-index: 10;
-  background-color: rgba(0, 0, 0, 0.5);
-}
 .SliderModal {
-  position: relative !important;
-  width: 100%;
-  background-color: var(--primary);
-  border-radius: 16px;
-  z-index: 10;
-  overflow: hidden;
-  flex-direction: column;
-  max-width: 566px;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  width: 566px;
   &__time {
     font-size: 12px;
     line-height: 1.33;
@@ -125,7 +101,6 @@
     border-radius: 50%;
     border: none;
     outline: none;
-    cursor: pointer;
     transition: opacity .3s ease-in-out;
     z-index: 10;
     &-img {
@@ -134,6 +109,9 @@
       left: 50%;
       transform: translate(-50%,-50%);
     }
+  }
+  &__close:hover {
+    opacity: .7;
   }
   &__img-wrapper {
     height: 335px;
