--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -3,6 +3,7 @@
 @import 'animate.css';
 @import './components/counter.scss';
 @import './components/modals.scss';
+@import './components/btns';
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
@@ -29,10 +30,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--background);
-}
-
-a {
-  text-decoration: none !important;
 }
 
 ol, ul {
